# HandyCode

./: .gitignore  LICENSE  README.md  REDME.md  install.bat  install.ps1  install.sh  setup.cfg  setup.py  update.bat
handycode/: __init__.py  __main__.py  assistant.py  cli.py  config.py  file_manager.py  logo.py  main.py  models.py  project_templates.py  security.py  utils.py
