[metadata]
name = handycode
version = 2.0.0
description = AI Ассистент для разработки
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/handycode
author = HandyCode Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    colorama>=0.4.6

[options.entry_points]
console_scripts =
    handycode = handycode.main:main
    hc = handycode.main:main